<resources>
    <string name="app_name">Aplicación de Votaciones</string>
    <string name="historialSalasFinal">Historial</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crear_sala_nombre_text">Nombre sala</string>
    <string name="button_crear_sala_crear_">Crear</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="bn_ver_salas">Ver Salas</string>

    <string name="title_activity_menu_app">MenuApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--  Karen  -->
    <!-- Registro de Usuario  -->
    <string name="tituloRegistroUsuario">Registro de Usuario</string>
    <string name="registro_userName">Nombre de usuario</string>
    <string name="registro_correoElectronico">Correo Electronico</string>
    <string name="registro_contraseñaUsuario">Contraseña</string>
    <string name="confirmarRegistroContra">Confirmar contraseña</string>
    <string name="botonVolver">Volver</string>
    <string name="botonSiguiente">Siguiente</string>

    <!-- Registro de usuario segunda pantalla  -->
    <string name="tituloRegistroUsuario2">Registro de Usuario</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="apellidoUsuario">Apellido</string>
    <string name="dniUsuario">Dni</string>
    <string name="fechaNacimientoUsuario">Fecha de nacimiento</string>
    <string name="botonVolver2">Cancelar</string>
    <string name="botonResgistrar">Registrar</string>

    <!--Copiar-->
    <string name="titlulo_pickers">Obtener fecha y hora</string>

    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <!--Fin copiar-->

    <!-- Fabricio -->

    <string name="title_activity_mis_salas">Mis Salas</string>
    <string name="title_activity_listado_mis_salas">ListadoMisSalas</string>
    <string name="mis_salas">Mis salas</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="salas_title">Salas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La contraseña debe tener mas de 5 caracteres</string>
    <string name="login_failed">"Ingreso fallido"</string>
    <string name="title_activity_para_borrar">ParaBorrar</string>
    <string name="login_title">Ingreso de usuario</string>
    <string name="btn_text_registrarse">Registrarse</string>
    <string name="finalizar_sala_button_description">Finalizar sala</string>

    <!-- Nico -->
    <string name="votar">Añadir</string>
    <string name="button_guardar">Guardar</string>
    <string name="hint_titulo_OpVotacion">Titulo</string>
    <string name="hint_descripcion_OpVotacion">Descripcion</string>
    <string name="button_eliminar">Eliminar</string>
    <string name="bienvenido">Bienvenido/a</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_text_view_userActivity">Usuario:</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="nombre_text_view_userActivity">Nombre:</string>
    <string name="apellido_text_view_userActivity">Apellido:</string>
    <string name="dni_text_view_userActivity">DNI:</string>
    <string name="email_text_view_userActivity">Email:</string>
    <string name="logout_text_userActivity">Cerrar sesion</string>
    <string name="crear_sala_floating_button_description">Crear una sala</string>
    <string name="guardar_text_editar_perfil">Guardar</string>
    <string name="email_usuario">Email</string>
    <string name="editar_perfil_text_userActivity">Editar perfil</string>
    <string name="cancelar_text_editar_perfil">Cancelar</string>
    <string name="fechaNacimiento_text_view_userActivity">Fecha de nacimiento:</string>
    <string name="eliminar_description">Eliminar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="icono_de_sala">Icono de sala</string>
    <string name="nombre_textView">Nombre:</string>
    <string name="usuario_infoSala">Usuario:</string>
    <string name="estado_text_infoSala">Estado:</string>
    <string name="info_sala_item_menu_text">Info. de sala</string>
    <string name="dni">DNI</string>
    <string name="button_votar">Votar</string>
    <string name="biometric_title">Votar</string>
    <string name="biometric_subtitle"></string>
    <string name="biometric_description">Para realizar su voto debe Autentificarse</string>
    <string name="biometric_negative_button_text">CANCELAR</string>


    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Error en la verificacion</string>
    <string name="biometric_cancelled">Verificacion cancelada</string>
    <string name="biometric_success">Verificacion Exitosa!</string>
    <string name="button_eliminar_sala">Eliminar Sala</string>

</resources>