<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fondo_pantalla"
    tools:context=".activities.registro_usuario.Registro_usuario">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_izquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_derecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/tituloRegistroUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/login_form_details_medium"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:text="@string/tituloRegistroUsuario"
        android:textSize="24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_derecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/lineaDebajoTitulo"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="@id/guideline_derecha"
        app:layout_constraintStart_toStartOf="@+id/guideline_izquierda"
        app:layout_constraintTop_toBottomOf="@+id/tituloRegistroUsuario" />

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_editar_texto"
        android:hint="@string/nombreUsuario"
        android:inputType="text"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_derecha"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline_izquierda"
        app:layout_constraintTop_toBottomOf="@+id/tituloRegistroUsuario" />

    <EditText
        android:id="@+id/apellidoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_editar_texto"
        android:hint="@string/apellidoUsuario"
        android:inputType="text"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_derecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_izquierda"
        app:layout_constraintTop_toBottomOf="@+id/nombreUsuario" />

    <EditText
        android:id="@+id/dniUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_editar_texto"
        android:hint="@string/dniUsuario"
        android:inputType="number"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_derecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_izquierda"
        app:layout_constraintTop_toBottomOf="@+id/apellidoUsuario" />

    <EditText
        android:id="@+id/fechaNacimientoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_editar_texto"
        android:hint="@string/fechaNacimientoUsuario"
        android:inputType="date"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_derecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_izquierda"
        app:layout_constraintTop_toBottomOf="@+id/dniUsuario" />

    <EditText
        android:id="@+id/ubicación"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_editar_texto"
        android:hint="@string/ubicacion"
        android:inputType="text"
        android:padding="14dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_derecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_izquierda"
        app:layout_constraintTop_toBottomOf="@+id/fechaNacimientoUsuario" />

    <Button
        android:id="@+id/botonSiguiente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_background"
        android:text="@string/botonSiguiente"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideline_derecha"
        app:layout_constraintStart_toStartOf="@+id/guideline_izquierda"
        app:layout_constraintTop_toBottomOf="@id/ubicación" />


</androidx.constraintlayout.widget.ConstraintLayout>